# Dog-Shelter-Management-Application

./: CMakeLists.txt  README.md  main.cpp
Entity/: DogEntity.cpp  DogEntity.h
Exceptions/: ProgramExceptions.h
GUI/: AdoptionListTableView.cpp  AdoptionListTableView.h  QtGUI.cpp  QtGUI.h
Repository/: CSV_Repository.cpp  CSV_Repository.h  HTML_Repository.cpp  HTML_Repository.h  Repository.cpp  Repository.h  SQL_Repository.cpp  SQL_Repository.h
Service/: AdminController.cpp  AdminController.h  UserController.cpp  UserController.h
StringFunctions/: StringFunctions.cpp  StringFunctions.h
Tests/: Test.cpp  Test.h
UML Diagram/: project_uml_diagram.mdj
UserInterface/: UI.cpp  UI.h
Validator/: ProgramValidator.cpp  ProgramValidator.h
